--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         URPM
-version:      1.43
-version_from: URPM.pm
-installdirs:  site
+---
+abstract: unknown
+author:
+  - unknown
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: URPM
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-    MDV::Packdrakeng:              1.00
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+  MDV::Packdrakeng: 1.00
+version: 4.21
