--- a/META.yml
+++ b/META.yml
@@ -2,12 +2,9 @@
 abstract: unknown
 author:
   - unknown
-build_requires:
-  ExtUtils::MakeMaker: 0
-configure_requires:
-  ExtUtils::MakeMaker: 0
+build_requires: {}
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.78, CPAN::Meta::Converter version 2.132830'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,6 +14,4 @@ no_index:
   directory:
     - t
     - inc
-requires:
-  MDV::Packdrakeng: 1.00
-version: 4.29
+version: v4.29.1
