--- a/META.yml
+++ b/META.yml
@@ -2,7 +2,10 @@
 abstract: unknown
 author:
   - unknown
-build_requires: {}
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
 dynamic_config: 1
 generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
 license: unknown
@@ -14,4 +17,6 @@ no_index:
   directory:
     - t
     - inc
-version: v4.29.6
+requires:
+  MDV::Packdrakeng: 1.00
+version: 4.30
