Import of TVIGNAUD/URPM-5.00 from CPAN.
gitpan-cpan-distribution: URPM
gitpan-cpan-version:      5.00
gitpan-cpan-path:         TVIGNAUD/URPM-5.00.tgz
gitpan-cpan-author:       TVIGNAUD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,20 +3,20 @@ abstract: unknown
 author:
   - unknown
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.140640'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: URPM
 no_index:
   directory:
     - t
     - inc
 requires:
-  MDV::Packdrakeng: 1.00
-version: 4.30
+  MDV::Packdrakeng: '1.00'
+version: '5.00'
